@@ -1,3 +1,6 @@
+[Enhancement]
+- Limit calculations can be disabled by setting the option 'limit' to false.
+
 1.4.2
 [Feature]
 - The plugin support percentages as target ('50%' or {top:'50%', left:'45%'})
